--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,9 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-security")
     // Spring Security: OAuth2
     compile("org.springframework.security.oauth:spring-security-oauth2:2.3.2.RELEASE")
+
+    /**
+     * Time
+     */
+    compile("org.apache.commons:commons-lang3:3.7")
 }
