--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 allprojects {
     apply plugin: 'idea'
     apply plugin: 'java'
+    apply plugin: 'application'
 }
 
 subprojects {
