Few changes made for the backend to make it ready fpr deploying on AWS 1. Enabled /oauth/check_token endpoint for validating tokens 2. Small bug fixes for loader and modified token expiration time 3. Unit test dependencies added and ready to create more unit tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,12 @@ targetCompatibility = 1.8
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+    /**
+     * Test
+     */
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompileOnly('junit:junit:4.12')
+    testCompile('org.mockito:mockito-all:1.10.19')
     /**
      * Data
      */
@@ -33,14 +38,12 @@ dependencies {
     compile("redis.clients:jedis:2.9.0")
     // Use MySQL Connector-J
     compile('mysql:mysql-connector-java')
-
     /**
      * Security
      */
     compile("org.springframework.boot:spring-boot-starter-security")
     // Spring Security: OAuth2
     compile("org.springframework.security.oauth:spring-security-oauth2:2.3.2.RELEASE")
-
     /**
      * Time
      */
