--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # application startup port number
-server.port=8080
+server.port=8181
 # none, validate, update, create, and create-drop
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/task_management_db_mysql?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
