--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ allprojects {
     apply plugin: 'idea'
     apply plugin: 'java'
     apply plugin: 'application'
+    mainClassName = 'com.walmart.labs.Application'
 }
 
 subprojects {
